--- a/polybar/config
+++ b/polybar/config
@@ -23,6 +23,7 @@ line-size = 2
 font-0 = "RobotoMono Nerd Font:size=11"
 
 label-active-font = 0
+tray-position = right
 
 spacing = 1
 padding-right = 1
@@ -33,7 +34,7 @@ padding-right = 1
 
 modules-left = i3
 modules-center = date
-modules-right = battery
+modules-right = mpd volume battery
 
 ;===========================================
 ;=============== Date Module ===============
@@ -113,9 +114,12 @@ label-urgent-foreground = ${colors.white}
 label-urgent-background = ${colors.magenta}
 label-urgent-padding = 1
 
+;=============================================
+;=============== ===============
+;=============================================
+
 [module/battery]
 type = internal/battery
-full-at = 99
 
 battery = BAT0
 adapter = AC
@@ -148,3 +152,124 @@ animation-charging-3 = 
 animation-charging-4 = 
 ; Framerate in milliseconds
 animation-charging-framerate = 750
+
+;=============================================
+;=============== Network Module ==============
+;=============================================
+
+;=============================================
+;=============== Volume Module ===============
+;=============================================
+
+[module/volume]
+type = internal/volume
+
+mapped = true
+
+label-muted =   %percentage%%
+label-volume = %percentage%%
+
+format-volume = <ramp-volume> <label-volume> <bar-volume>
+bar-volume-width = 10
+bar-volume-indicator = |
+bar-volume-fill =  
+bar-volume-empty = 
+
+
+format-volume-padding = 2
+format-muted-padding = ${self.format-volume-padding}
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+
+ramp-headphones-0 = 
+ramp-headphones-1 = 
+
+;==========================================
+;=============== MPD Module ===============
+;==========================================
+
+[module/mpd]
+type = internal/mpd
+
+host = 127.0.0.1
+port = 6600
+
+; Seconds to sleep between progressbar/song timer sync
+; Default: 1
+interval = 2
+
+; Available tags:
+;   <label-song> (default)
+;   <label-time>
+;   <bar-progress>
+;   <toggle> - gets replaced with <icon-(pause|play)>
+;   <toggle-stop> - gets replaced with <icon-(stop|play)>
+;   <icon-random>
+;   <icon-repeat>
+;   <icon-repeatone>
+;   <icon-prev>
+;   <icon-stop>
+;   <icon-play>
+;   <icon-pause>
+;   <icon-next>
+;   <icon-seekb>
+;   <icon-seekf>
+format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
+;format-playing = ${self.format-online}
+;format-paused = ${self.format-online}
+;format-stopped = ${self.format-online}
+
+; Available tags:
+;   <label-offline>
+;format-offline = <label-offline>
+
+; Available tokens:
+;   %artist%
+;   %album%
+;   %date%
+;   %title%
+; Default: %artist% - %title%
+label-song = 𝄞 %artist% - %title%
+
+; Available tokens:
+;   %elapsed%
+;   %total%
+; Default: %elapsed% / %total%
+;label-time = %elapsed% / %total%
+
+; Available tokens:
+;   None
+label-offline = 🎜 mpd is offline
+
+; Only applies if <icon-X> is used
+icon-play = ⏵:
+icon-pause = ⏸
+icon-stop = ⏹
+icon-prev = ⏮
+icon-next = ⏭
+icon-seekb = ⏪
+icon-seekf = ⏩
+icon-random = 🔀
+icon-repeat = 🔁
+icon-repeatone = 🔂
+
+; Used to display the state of random/repeat/repeatone
+; Only applies if <icon-[random|repeat|repeatone]> is used
+toggle-on-foreground = #ff
+toggle-off-foreground = #55
+
+; Only applies if <bar-progress> is used
+bar-progress-width = 45
+bar-progress-indicator = |
+bar-progress-fill = ─
+bar-progress-empty = ─
+
+;================================================
+;=============== Backlight Module ===============
+;================================================
+
+;===============================================
+;=============== Keyboard Module ===============
+;===============================================
