--- a/polybar/config
+++ b/polybar/config
@@ -44,8 +44,8 @@ modules-right = mpd volume battery
 type = internal/date
 interval = 1.0
 
-date = %d/%m/%Y
-time = %H:%M
+date =  %d/%m/%Y
+time =  %H:%M
 
 date-alt = %a, %d %B %Y
 time-alt = %H:%M:%S
@@ -84,8 +84,10 @@ ws-icon-9 = 10;
 
 ;=============== WS Formatting ===============
 
+;--------------- Formats --------------- 
 format = <label-state> <label-mode>
 
+;--------------- Labels --------------- 
 label-mode = %mode%
 label-mode-padding = 2
 
@@ -114,48 +116,46 @@ label-urgent-foreground = ${colors.white}
 label-urgent-background = ${colors.magenta}
 label-urgent-padding = 1
 
-;=============================================
-;=============== ===============
-;=============================================
+;==============================================
+;=============== Battery Module ===============
+;==============================================
 
 [module/battery]
-type = internal/battery
 
+;--------------- Core --------------- 
+type = internal/battery
 battery = BAT0
 adapter = AC
 
-time-format = %H:%M
-
+;--------------- Formats --------------- 
 format-charging = <animation-charging><label-charging>
 format-discharging = <ramp-capacity><label-discharging>
 format-full = <ramp-capacity><label-full>
 
+;--------------- Labels --------------- 
 label-charging = %percentage%%
-label-discharging = %percentage%%
-label-full = %percentage%%
+label-discharging = ${self.label-charging}
+label-full = ${self.label-charging}
 
-; Only applies if <ramp-capacity> is used
+;--------------- Icons --------------- 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 
-; Only applies if <bar-capacity> is used
+;--------------- Bar Width --------------- 
 bar-capacity-width = 10
 
-; Only applies if <animation-charging> is used
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-; Framerate in milliseconds
-animation-charging-framerate = 750
+;--------------- Charging Icons --------------- 
+animation-charging-0 = ${self.ramp-capacity-0}
+animation-charging-1 = ${self.ramp-capacity-1}
+animation-charging-2 = ${self.ramp-capacity-2}
+animation-charging-3 = ${self.ramp-capacity-3}
+animation-charging-4 = ${self.ramp-capacity-4}
 
-;=============================================
-;=============== Network Module ==============
-;=============================================
+;--------------- Framerate --------------- 
+animation-charging-framerate = 750
 
 ;=============================================
 ;=============== Volume Module ===============
@@ -175,7 +175,6 @@ bar-volume-indicator = |
 bar-volume-fill =  
 bar-volume-empty = 
 
-
 format-volume-padding = 2
 format-muted-padding = ${self.format-volume-padding}
 
@@ -185,86 +184,6 @@ ramp-volume-2 = 
 
 ramp-headphones-0 = 
 ramp-headphones-1 = 
-
-;==========================================
-;=============== MPD Module ===============
-;==========================================
-
-[module/mpd]
-type = internal/mpd
-
-host = 127.0.0.1
-port = 6600
-
-; Seconds to sleep between progressbar/song timer sync
-; Default: 1
-interval = 2
-
-; Available tags:
-;   <label-song> (default)
-;   <label-time>
-;   <bar-progress>
-;   <toggle> - gets replaced with <icon-(pause|play)>
-;   <toggle-stop> - gets replaced with <icon-(stop|play)>
-;   <icon-random>
-;   <icon-repeat>
-;   <icon-repeatone>
-;   <icon-prev>
-;   <icon-stop>
-;   <icon-play>
-;   <icon-pause>
-;   <icon-next>
-;   <icon-seekb>
-;   <icon-seekf>
-format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
-;format-playing = ${self.format-online}
-;format-paused = ${self.format-online}
-;format-stopped = ${self.format-online}
-
-; Available tags:
-;   <label-offline>
-;format-offline = <label-offline>
-
-; Available tokens:
-;   %artist%
-;   %album%
-;   %date%
-;   %title%
-; Default: %artist% - %title%
-label-song = 𝄞 %artist% - %title%
-
-; Available tokens:
-;   %elapsed%
-;   %total%
-; Default: %elapsed% / %total%
-;label-time = %elapsed% / %total%
-
-; Available tokens:
-;   None
-label-offline = 🎜 mpd is offline
-
-; Only applies if <icon-X> is used
-icon-play = ⏵:
-icon-pause = ⏸
-icon-stop = ⏹
-icon-prev = ⏮
-icon-next = ⏭
-icon-seekb = ⏪
-icon-seekf = ⏩
-icon-random = 🔀
-icon-repeat = 🔁
-icon-repeatone = 🔂
-
-; Used to display the state of random/repeat/repeatone
-; Only applies if <icon-[random|repeat|repeatone]> is used
-toggle-on-foreground = #ff
-toggle-off-foreground = #55
-
-; Only applies if <bar-progress> is used
-bar-progress-width = 45
-bar-progress-indicator = |
-bar-progress-fill = ─
-bar-progress-empty = ─
 
 ;================================================
 ;=============== Backlight Module ===============
